next possible fix for request appointment windown zoom on mobile

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -340,25 +340,3 @@ img {
     background-color: rgba(0, 0, 0, 0.37);
   }
 }
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (-o-min-device-pixel-ratio: 3/2),
-only screen and (min--moz-device-pixel-ratio: 1.5),
-only screen and (min-device-pixel-ratio: 1.5){
-
-  html,
-  body{
-    width:100%;
-    overflow-x:hidden;
-  }
-
-}
-
-body {
-  padding-right: 0px !important
-}
-
-.modal-open {
-  overflow-y: auto;
-}
